test/types/string/vass/bogus-backslash.good
bogus-backslash.chpl:5: warning: owned object?
bogus-backslash.chpl:6: warning: owned object?
bogus-backslash.chpl:7: error: true
